tests/ui/set_ard.stderr
error[E0505]: cannot move out of `desc` because it is borrowed
  --> $DIR/set_ard.rs:52:36
   |
50 |     SQLSetStmtAttrA(&stmt, SQL_ATTR_APP_ROW_DESC, Some(&desc));
   |                                                        ----- borrow of `desc` occurs here
51 |
52 |     SQLFreeHandle(SQL_HANDLE_DESC, desc);
   |                                    ^^^^ move out of `desc` occurs here
53 |     SQLFreeHandle(SQL_HANDLE_STMT, stmt);
   |                                    ---- borrow later used here
